[gd_scene load_steps=14 format=3 uid="uid://d36mrokfs3i2g"]

[ext_resource type="Script" path="res://scripts/enemies/blink_fey.gd" id="1_8b6yc"]
[ext_resource type="Texture2D" uid="uid://b3ij5jrmqmlpf" path="res://art/enemy sprites/BlinkFeyV1.png" id="2_aym61"]
[ext_resource type="PackedScene" uid="uid://cn2bi5uhlbamd" path="res://scenes/other/vector_wheel.tscn" id="3_i4y1k"]
[ext_resource type="PackedScene" uid="uid://ccmwkars1n0na" path="res://scenes/UI_and_the_like/hp_bar.tscn" id="4_o51dn"]

[sub_resource type="Animation" id="Animation_rx6wp"]
resource_name = "main"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_ltyla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytw3d"]
_data = {
"RESET": SubResource("Animation_ltyla"),
"main": SubResource("Animation_rx6wp")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p82iq"]
animation = &"main"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tadrk"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_l6pnh"]
states/main/node = SubResource("AnimationNodeAnimation_p82iq")
states/main/position = Vector2(434.5, 98.5)
transitions = ["Start", "main", SubResource("AnimationNodeStateMachineTransition_tadrk")]

[sub_resource type="CircleShape2D" id="CircleShape2D_agn4q"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_st8s6"]
radius = 224.377

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4tvk2"]
cull_mode = 1
polygon = PackedVector2Array(0.5, 0, 0, 0.5, -0.5, 0, 0, -0.5)

[node name="CharacterBody2DG" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 540
collision_mask = 2
script = ExtResource("1_8b6yc")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_aym61")
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytw3d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_l6pnh")
anim_player = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_agn4q")

[node name="StateDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="VisionField" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionField"]
position = Vector2(-0.178571, 0)
rotation = 3.14159
scale = Vector2(0.964286, 1)
polygon = PackedVector2Array(-6.40746, 11, -189.964, 127.999, -185.814, -123.001, -8.48146, -5.00004)

[node name="PlayerRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-42, 94)
collision_mask = 66

[node name="WallRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-90, 99)
collision_mask = 2

[node name="LookForPlayerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="LookForPlayerArea"]
visible = false
shape = SubResource("CircleShape2D_st8s6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_line_width = 1.0

[node name="VectorWheel" parent="." instance=ExtResource("3_i4y1k")]
scale = Vector2(0.5, 0.5)

[node name="DebugLabel" type="Label" parent="."]
offset_left = -19.0
offset_top = -10.0
offset_right = 21.0
offset_bottom = 13.0

[node name="HPBar" parent="." instance=ExtResource("4_o51dn")]
offset_left = -10.0
offset_top = -22.0
offset_right = 118.0
offset_bottom = 106.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
rotation = 3.14159
scale = Vector2(16, 16)
occluder = SubResource("OccluderPolygon2D_4tvk2")

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="StateDurationTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="VisionField" to="." method="singal_test"]
[connection signal="body_entered" from="VisionField" to="." method="_on_vision_field_body_entered"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
